--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
+
 * {
-  margin: 0 auto;
-  background-color: red;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  background-color: #B53471;
+  color: white;
 }
