--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,4 +5,11 @@
     margin: 0;
   background-color: #B53471;
   color: white;
+  font-family: 'Dosis', sans-serif;
+}
+
+h1 {
+  position: absolute;
+  left: 33%;
+  top: 10%;
 }
